<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jonny.snakeoil.DisplayCards">


    <TextView
        android:id="@+id/word2"
        android:text="@string/word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="10mm"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/word1"
        android:text="@string/word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/word2"
        android:textSize="10mm"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/swapButton"
        android:onClick="swapWords"
        android:text="@string/swap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/word2"/>

    <Button
        android:id="@+id/returnButton"
        android:onClick="exitPage"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
